--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,21 @@ Authors@R:
     person(given = "Todd",
            family = "Knutson",
            role = c("aut", "cre"),
-           email = "toddknutson@gmail.com")
+           email = "knut0297@umn.edu")
 Description: This R package contains functions that are useful to Todd Knutson.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
+Imports:
+    ggplot2,
+    dplyr,
+    tidyr,
+    readr,
+    purrr,
+    tibble,
+    stringr,
+    forcats,
+    DESeq2,
+    edgeR,
+    devtools
